--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <script src="script.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
+    <header>
+      <div class="container">
+        <div class="linha">
+          <div class="col-6">
+            <img src="img/logo.png" alt="" />
+            <h1>Auto Zone</h1>
+            <p>Peças automotivas</p>
+          </div>
+          <div class="col-6">
+            <h1>Contato</h1>
+            <p>(34)3222-2222</p>
+          </div>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Revisões</a></li>
+            <li><a href="">Loja de peças</a></li>
+            <li><a href="">Filiais</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main></main>
   </body>
 </html>
