--- a/index.html
+++ b/index.html
@@ -2,33 +2,44 @@
   <head>
     <meta charset="UTF-8" />
     <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="linha">
-          <div class="col-6">
-            <img src="img/logo.png" alt="" />
-            <h1>Auto Zone</h1>
-            <p>Peças automotivas</p>
-          </div>
-          <div class="col-6">
-            <h1>Contato</h1>
-            <p>(34)3222-2222</p>
+      <div class="cor">
+        <div class="container cabecario">
+          <div class="linha cabecario">
+            <div class="col-6 cabecario">
+              <img
+                src="https://stackblitz.com/files/web-platform-pwptn3/github/Samuell0003/lista15/master/logo.png"
+                alt=""
+              />
+              <h1>Auto Zone</h1>
+              <p>Peças automotivas</p>
+            </div>
+            <div class="col-6 cabecario">
+              <h1>Contato</h1>
+              <p>(34)3222-2222</p>
+            </div>
           </div>
         </div>
-        <nav>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Revisões</a></li>
-            <li><a href="">Loja de peças</a></li>
-            <li><a href="">Filiais</a></li>
-          </ul>
-        </nav>
+      </div>
+      <div class="cor2">
+        <div class="container">
+          <nav>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">Sobre</a></li>
+              <li><a href="">Revisões</a></li>
+              <li><a href="">Loja de peças</a></li>
+              <li><a href="">Filiais</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="container"></div>
+    </main>
   </body>
 </html>
