--- a/index.html
+++ b/index.html
@@ -39,7 +39,31 @@
       </div>
     </header>
     <main>
-      <div class="container"></div>
+      <article class="container">
+        <section class="linha">
+          <div class="col-8"></div>
+          <div class="col-4">
+            <h2>Masserati GT</h2>
+            <p>
+              Deverá conter 3 seções, conforme mostrado na imagem. A primeira
+              seção, composta pela imagem de um carro (lado esquerdo) + texto
+              (lado direito) deverão ocupar 70% e 30%, respectivamente, de
+              largura. A segunda seção deverá ser composta por quatro colunas,
+              cada uma ocupando 25% de largura. A terceira seção deverá ser
+              criada por você (utilize a sua criatividade para isso)
+            </p>
+          </div>
+        </section>
+        <section class="linha">
+          <div class="col-3">
+            
+          </div>
+          <div class="col-3"></div>
+          <div class="col-3"></div>
+          <div class="col-3"></div>
+        </section>
+        <section class="linha"></section>
+      </article>
     </main>
   </body>
 </html>
